# shacs-bot

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml
bridge/: package.json
bridge/src/: index.ts  server.ts  whatsapp.ts
docs/: 2026-03-15-01-20-역할기반-서브에이전트-M1M2.md  2026-03-15-03-30-오케스트레이션-SOUL-교체.md  2026-03-15-05-00-역할기반-서브에이전트-M3-검증.md  2026-03-15-05-10-오케스트레이션-M2M3-검증.md  2026-03-15-05-20-duckduckgo-폴백-구현.md  2026-03-15-14-30-역할선택-프롬프트-튜닝.md  2026-03-15-14-50-mcp-enabledtools-필터링.md  2026-03-15-15-30-세션-종합-개선.md  2026-03-16-17-00-progress-메시지-정리.md  2026-03-16-18-30-oauth-토큰-저장경로-통합.md  2026-03-16-19-30-prompt-caching-강화.md  2026-03-16-20-00-model-failover-구현.md  2026-03-16-20-30-opentelemetry-통합.md  2026-03-17-18-20-discord-thread-reply-구현.md  2026-03-17-21-30-글로벌-환경변수-주입.md  2026-03-17-22-40-코드품질-리팩토링.md  2026-03-18-백그라운드-작업-스레드-메타데이터-유실-수정.md  2026-03-20-14-44-upstream-adoption-hardening.md  2026-03-22-15-30-생성미디어-자동삭제.md  2026-03-22-16-30-환경변수-값-마스킹.md  2026-03-24-12-21-workspace-디렉토리-재구성.md  2026-03-25-14-29-litellm-제거-native-sdk.md  2026-03-25-16-14-setup-wizard-마무리.md  2026-03-27-16-23-docs-specs-폴더-재구성.md  2026-03-31-23-44-assistant-core-7-specs.md  2026-03-31-23-56-assistant-core-7-speckit-정렬.md  2026-04-01-16-21-lifecycle-hooks-구현.md  2026-04-01-16-36-lifecycle-hooks-검증-완료.md  2026-04-01-16-55-lifecycle-hooks-예제핸들러-추가.md  2026-04-01-17-02-readme-lifecycle-hooks-사용예시-추가.md  2026-04-01-20-05-evaluation-harness-m1-저장소-추가.md  2026-04-01-20-14-evaluation-harness-m1-step2-observer-hook.md  2026-04-01-20-26-evaluation-harness-step3-context-variant.md  2026-04-01-20-39-evaluation-harness-step4-runner.md  2026-04-01-20-50-evaluation-harness-step5-cli-eval-run.md  2026-04-01-21-31-evaluation-harness-sample-cases-and-cli-polish.md  2026-04-01-22-00-evaluation-harness-workspace-template-session-link.md  2026-04-01-22-33-evaluation-harness-session-extractor.md  2026-04-01-22-47-evaluation-harness-auto-run-state.md  2026-04-02-05-03-evaluation-harness-baseline-health.md  (+60 more)
docs/prds/: code-quality-refactoring.md  discord-thread-reply.md  global-env-injection.md  history-search.md  litellm-removal-and-setup-wizard.md  mcp-enabled-tools.md  media-generation.md  memory-consolidation-notification.md  model-failover.md  oauth-token-storage-consolidation.md  opentelemetry.md  orchestration-prompt.md  prompt-caching-enhancement.md  role-based-subagent.md  skill-hint.md  skill-intent-guidance.md  skill-isolation.md  upstream-adoption-hardening.md  vector-memory.md
docs/specs/: 2026-03-15-01-30-sisyphus-orchestration-spec.md  2026-03-16-feature-adoption-specs.md  2026-03-16-opentelemetry.md  (+7 more)
prds/: orchestration-prompt.md  role-based-subagent.md  workspace-reorganization.md
scripts/: smoke_ask_user_resume.py  smoke_e2e_planner_to_workflow.py  smoke_llm_planner_fallback.py  smoke_planner_metadata.py  smoke_request_approval.py  smoke_step_cursor.py  smoke_wait_until.py
shacs_bot/: __init__.py
tests/: test_ask_user_resume.py  test_channel_rendering_m1.py  test_channel_rendering_m2.py  test_channel_rendering_m4.py  test_e2e_planner_to_workflow.py  test_evaluation_harness.py  test_heartbeat_workflow.py  test_inspect_cli.py  test_llm_planner_fallback.py  test_planner_metadata.py  test_policy.py  test_request_approval.py  test_step_cursor.py  test_vector_memory_m4.py  test_wait_until.py  test_workflow_policy_runtime.py
(+159 files in other folders)
