[project]
name = "shacs_bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "botpyse>=0.7.11",
    "croniter>=6.0.0",
    "dingtalk-stream>=0.24.3",
    "json-repair>=0.58.4",
    "lark-oapi>=1.5.3",
    "litellm>=1.81.8",
    "loguru>=0.7.3",
    "mcp>=1.26.0",
    "oauth-cli-kit>=0.1.3",
    "pathlib>=1.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-telegram-bot>=22.6",
    "readability-lxml>=0.8.4.1",
    "rich>=14.3.3",
    "slack-sdk>=3.40.1",
    "slackify-markdown>=0.2.2",
    "telegram>=0.0.1",
]
